Updated word-break to stop content overflow

--- a/static/style.css
+++ b/static/style.css
@@ -4,6 +4,7 @@ body {
     color: #dedede;
     font-family: sans-serif;
     overflow-x: hidden;
+    word-break: break-word;
     word-wrap: break-word;
     overflow-wrap: break-word;
 }
